# state-record

./: .gitignore  Fields.hs  README.markdown  state-record.cabal  table  todo
doc/: todo
examples/: README
examples/new/: Bar.hs  Foo.hs  Types.hs
examples/old/: Bar.hs  Foo.hs  Types.hs
src/Data/Record/: StateFields.hs
src/Data/Record/StateFields/: Containers.hs  Core.hs  Templates.hs
