
name: state-record
version: 0.1.0.0
cabal-version: -any
build-type: Simple
license: GPL
license-file: LICENSE
copyright: (c) 2011 Karl Voelker
build-depends:
  base >= 4 && < 5,
  containers >= 0.4 && < 0.5,
  mtl >= 2.1 && < 2.2,
  template-haskell >= 2.7 && < 2.8,
  array >= 0.4 && < 0.5
stability: unstable
homepage: https://github.com/ktvoelker/state-record
maintainer: Karl Voelker <ktvoelker@gmail.com>
synopsis: Better records for State monad states
description:
  This package provides a Template Haskell function which transforms a normal
  record declaration into one which supports many useful operations when used
  as the state in a State monad.
category: Data
author: Karl Voelker <ktvoelker@gmail.com>
exposed-modules:
  Data.Record.StateFields
  Data.Record.StateFields.Containers
other-modules:
  Data.Record.StateFields.Core
  Data.Record.StateFields.Templates
hs-source-dirs: src
extensions:
  TemplateHaskell
  MultiParamTypeClasses
  FunctionalDependencies
  Rank2Types
  FlexibleInstances
  ScopedTypeVariables
  FlexibleContexts

